[package]
name = "also-sprach-ami"
version = "0.1.0"
authors = ["sinofseven <em.s.00001@gmail.com>"]
edition = "2018"

description = "unofficial cli tool for AmiVoice Cloud Platform"
repository = "https://github.com/sinofseven/also-sprach-ami"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tungstenite = "0.11.1"
dirs = "3.0.1"
clap = "2.33.3"
url = "2.1"